--- a/packages/SystemUI/res/values/cmremix_strings.xml
+++ b/packages/SystemUI/res/values/cmremix_strings.xml
@@ -126,9 +126,6 @@
     <!-- Pie tile -->
     <string name="quick_settings_pie">Pie</string>
 
-    <!-- Restart UI -->
-    <string name="quick_settings_systemui_restart_label">Restart SystemUI</string>
-
     <!-- LTE Tile -->
     <string name="qs_lte_label">LTE</string>
     <string name="lte_on">LTE ON </string>
@@ -247,5 +244,8 @@
     <string name="quick_settings_slim_floats_off">Slim Float Mode Disabled</string>
 
     <string name="pulse_toast_message">Visualizer Tile will not work with pulse enabled</string>
+
+    <!-- SystemUI restart tile -->
+    <string name="quick_settings_systemui_restart_label">Restart SystemUI</string>
 
 </resources>
